webserver/webserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-deployment
  namespace: default
  labels:
    app: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: webserver
        image: webserver:2
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
  namespace: default
spec:
  selector:
    app: webserver
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: webserver-ingress
#  namespace: default
#spec:
#  rules:
#    - host:
#      http:
#        paths:
#          - pathType: Prefix
#            path: /
#            port: 4444
#            backend:
#              service:
#                name: webserver-dashboard
#                port:
#                  number: 8080
